# MasterRad

./: .gitignore  LICENSE  README.md  pyproject.toml
frontend/curriculum-management/: package-lock.json  package.json
frontend/curriculum-management/src/: App.js  index.css
frontend/curriculum-management/src/components/card/: Card.css  Card.js
frontend/curriculum-management/src/components/card_grid/: CardGrid.css  CardGrid.js
frontend/curriculum-management/src/components/layout/: Layout.css  Layout.js
frontend/curriculum-management/src/components/question/: Question.css  Question.js
frontend/curriculum-management/src/components/sidebar/: Sidebar.css  Sidebar.js
frontend/curriculum-management/src/context/: AccessibilityContext.js
frontend/curriculum-management/src/pages/course/: Course.css  Course.js
frontend/curriculum-management/src/pages/home/: Home.css  Home.js
frontend/curriculum-management/src/pages/module/: Module.css  Module.js
frontend/curriculum-management/src/pages/test/: Test.css  Test.js
frontend/curriculum-management/src/pages/test_result/: TestResult.css  TestResult.js
frontend/curriculum-management/src/services/: AxiosInstance.js  CourseService.js  ModuleService.js  TestService.js
src/: api.py  main.py  utils.py
src/DSL_language/: crcDSL.tx  interpreter.py  metamodel.py
src/DSL_model/: answer.py  course.py  curriculum.py  image.py  module.py  multiple_choice_question.py  number_question.py  open_ended_question.py  pass_criteria.py  question.py  single_choice_question.py  test.py  true_false_question.py  video.py
src/Dto/Course/: CompleteCourseRequest.py
src/Dto/Modul/: CompleteModuleRequest.py
src/Dto/Test/: CompleteTestRequest.py
src/Example/: test.crc
