[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "curriculumjsd"
version = "0.0.1"
license = {text = "MIT License"}
authors = [ {name = "Stefan Apostolovic", email = "stefanapostolovic1@gmail.com"}]
dependencies = [
"annotated-types==0.7.0",
"anyio==4.4.0",
"appdirs==1.4.4",
"Arpeggio==2.0.2",
"Brotli==1.1.0",
"certifi==2024.7.4",
"cffi==1.16.0",
"charset-normalizer==3.3.2",
"click==8.1.7",
"colorama==0.4.6",
"cssselect2==0.7.0",
"docutils==0.21.2",
"fastapi==0.112.0",
"flit==3.9.0",
"flit_core==3.9.0",
"fonttools==4.47.2",
"ghp-import==2.1.0",
"h11==0.14.0",
"html5lib==1.1",
"idna==3.7",
"importlib_metadata==8.2.0",
"importlib_resources==6.4.0",
"Jinja2==3.1.3",
"Markdown==3.6",
"MarkupSafe==2.1.3",
"mergedeep==1.3.4",
"mike==2.1.2",
"mkdocs==1.6.0",
"mkdocs-get-deps==0.2.0",
"numpy==2.0.1",
"packaging==24.1",
"pathspec==0.12.1",
"pillow==10.2.0",
"platformdirs==4.2.2",
"pycparser==2.21",
"pydantic==2.8.2",
"pydantic_core==2.20.1",
"pydyf==0.8.0",
"pyparsing==3.1.2",
"pyphen==0.14.0",
"python-dateutil==2.9.0.post0",
"PyYAML==6.0.2",
"pyyaml_env_tag==0.1",
"requests==2.32.3",
"ruff==0.5.6",
"six==1.16.0",
"sniffio==1.3.1",
"starlette==0.37.2",
"textX==4.0.1",
"textX-dev==0.1.5",
"textX-jinja==0.3.0",
"textx-lang-questionnaire==0.2.0",
"tinycss2==1.2.1",
"tomli_w==1.0.0",
"typing_extensions==4.12.2",
"urllib3==2.2.2",
"uvicorn==0.30.5",
"verspec==0.1.0",
"watchdog==4.0.1",
"weasyprint==60.2",
"webencodings==0.5.1",
"zipp==3.19.2",
"zopfli==0.2.3"
]

[project.scripts]
crc-run="main:main"

[project.entry-points.textx_languages]
crc_dsl = "DSL_language.metamodel:crc_parser"